miner running inside docker container

--- a/miner/miner/Dockerfile
+++ b/miner/miner/Dockerfile
@@ -1,3 +1,4 @@
-FROM python
-RUN pip install scrapy
-COPY . /miner
+FROM python:2
+RUN pip install scrapy pymongo
+COPY . /miner/
+ENTRYPOINT ["/miner/bin/entrypoint.sh"]
