--- a/api/keyboardlist-api/conf/uwsgi.ini
+++ b/api/keyboardlist-api/conf/uwsgi.ini
@@ -5,7 +5,7 @@ module = keyboardlist.wsgi:application
 
 master = true
 processes = 10
-pid = /tmp/keyboardlist-api-master.pid
+pidfile = /tmp/keyboardlist-api-master.pid
 harakiri = 20
 max-requests = 5000
 
