--- a/api/keyboardlist-api-nginx/Dockerfile
+++ b/api/keyboardlist-api-nginx/Dockerfile
@@ -1,3 +1,3 @@
-FROM nginx
+FROM nginx:latest
 ADD ./sites-enabled/ /etc/nginx/sites-enabled
 CMD nginx -c /etc/nginx/sites-enabled/keyboardlist-api.conf
