data ingestion for manufacturer, seller, and keyboard

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: python
 python:
   - "3.4"
 before_install:
+  - pip install codecov
   - cd api/keyboardlist-api
 install:
   - pip install -r requirements.txt
 script:
   - pep8 --exclude=migrations --ignore=E501 .
-  - python manage.py test
+  - python manage.py test --with-coverage
+after_success:
+  - codecov
