fixed miner for mechanicalkeyboards.com site update. Data ingestion between miner and API is working

--- a/miner/miner/Dockerfile
+++ b/miner/miner/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:2
-RUN pip install scrapy pymongo
+RUN pip install scrapy pymongo requests
 COPY . /miner/
 ENTRYPOINT ["/miner/bin/entrypoint.sh"]
