--- a/api/keyboardlist-api-nginx/sites-enabled/keyboardlist-api.conf
+++ b/api/keyboardlist-api-nginx/sites-enabled/keyboardlist-api.conf
@@ -13,7 +13,7 @@ http {
 
         location /static/ {
             include /etc/nginx/mime.types;
-            alias /usr/src/app/static/;
+            alias /static/;
         }
 
         location / {
