--- a/api/keyboardlist-ui/package.json
+++ b/api/keyboardlist-ui/package.json
@@ -18,6 +18,19 @@
   "homepage": "https://github.com/davidharrigan/keyboardlist#readme",
   "dependencies": {
     "angular": "^1.4.8",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-less": "^3.0.1",
+    "gulp-filter": "^2.0.2",
+    "gulp-load-plugins": "^0.8.1",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-flatten": "^0.0.4",
+    "gulp-concat": "^2.5.2",
+    "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.1.1",
+    "gulp-ng-annotate": "^0.5.3",
+    "merge-stream": "^1.0.0"
   }
 }
