initial frontent, automation not 100%

--- a/api/keyboardlist-api-nginx/sites-enabled/keyboardlist-api.conf
+++ b/api/keyboardlist-api-nginx/sites-enabled/keyboardlist-api.conf
@@ -16,6 +16,11 @@ http {
             alias /static/;
         }
 
+        location /dist/ {
+            include /etc/nginx/mime.types;
+            alias /dist/;
+        }
+
         location / {
             # TODO: fix hostname for keyboardlist-api
             proxy_pass http://api_keyboardlist-api_1:8000;
