--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -17,11 +17,11 @@ keyboardlist-api:
       - "./keyboardlist-api/:/usr/src/app"
       - "/static"
 
-keyboardlist-ui:
-    build: keyboardlist-ui
-    volumes:
-      - "./keyboardlist-ui/:/usr/src/app"
-      - "/dist"
+#keyboardlist-ui:
+#    build: keyboardlist-ui
+#    volumes:
+#      - "./keyboardlist-ui/:/usr/src/app"
+#      - "/dist"
 
 nginx:
     restart: always
@@ -33,5 +33,6 @@ nginx:
       - keyboardlist-api
     volumes_from:
       - keyboardlist-api
-      - keyboardlist-ui
+    volumes:
+      - "./keyboardlist-ui/dist/:/dist"
 
