--- a/api/keyboardlist-ui/package.json
+++ b/api/keyboardlist-ui/package.json
@@ -31,6 +31,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1",
     "gulp-ng-annotate": "^0.5.3",
-    "merge-stream": "^1.0.0"
+    "merge-stream": "^1.0.0",
+    "uikit": "^2.24.0"
   }
 }
