less hardcoded stuff

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -17,15 +17,15 @@ keyboardlist-api:
       - "./keyboardlist-api/:/usr/src/app"
       - "/static"
 
-#keyboardlist-ui:
-#    build: keyboardlist-ui
-#    volumes:
-#      - "./keyboardlist-ui/:/usr/src/app"
-#      - "/dist"
+keyboardlist-ui:
+    build: keyboardlist-ui
+    volumes:
+      - "./keyboardlist-ui/:/usr/src/app"
+      - "/dist"
 
 nginx:
     restart: always
-    build: keyboardlist-api-nginx
+    build: keyboardlist-nginx
     ports:
       - "80:80"
       - "443:443"
