--- a/api/keyboardlist-nginx/sites-enabled/keyboardlist-api.conf
+++ b/api/keyboardlist-nginx/sites-enabled/keyboardlist-api.conf
@@ -7,7 +7,7 @@ events {
 # TODO: https
 http {
     server {
-        server_name api.keyboardlist.com;
+        server_name keyboardlist-dev.com;
         listen 80;
         charset utf-8;
 
