--- a/api/keyboardlist-ui/app/gulp_config.json
+++ b/api/keyboardlist-ui/app/gulp_config.json
@@ -2,7 +2,10 @@
   "src": {
     "js": {
       "main.js": [
-
+        "js/keyboardlist.js",
+        "js/keyboardlist.config.js",
+        "js/keyboardlist.routes.js",
+        "js/**/*.js"
       ]
     },
     "less": {
