sorting, filter my manufacture and logging

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -15,6 +15,7 @@ keyboardlist-api:
       - postgres
     volumes:
       - "./keyboardlist-api/:/usr/src/app"
+      - "./keyboardlist-api/logs/:/usr/src/logs/"
       - "/static"
 
 keyboardlist-ui:
